# frozen-lexpert

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  spectre_wrapper.py
configs/evaluate/: compare_models.yaml  compare_models_ctrate.yaml
configs/extract/: colipri_ctrate.yaml  colipri_radchest.yaml  ctclip_ctrate.yaml  ctclip_radchest.yaml  ctclip_zs_ctrate.yaml  ctclip_zs_radchest.yaml  ctfm_ctrate.yaml  ctfm_radchest.yaml  ctssg_ctrate.yaml  ctssg_radchest.yaml  curia2_ctrate.yaml  curia2_radchest.yaml  flexict3d_ctrate.yaml  flexict3d_radchest.yaml  flexict_ctrate.yaml  flexict_radchest.yaml  flexict_zs_ctrate.yaml  flexict_zs_radchest.yaml  merlin_ctrate.yaml  merlin_radchest.yaml  pillar0_ctrate.yaml  pillar0_radchest.yaml  spectre_large_ctrate.yaml  spectre_large_radchest.yaml  spectre_large_zs_ctrate.yaml  spectre_large_zs_radchest.yaml  voxelfm_ctrate.yaml  voxelfm_radchest.yaml
configs/zero_shot/: colipri.yaml  colipri_ctrate.yaml  compare.yaml  compare_ctrate.yaml  ctclip.yaml  ctclip_ctrate.yaml  flexict.yaml  flexict_ctrate.yaml  merlin.yaml  (+5 more)
ctfm_eval/: datasets.py  embeddings.py  eval.py  knn.py  zero_shot.py
docs/: finding_types.md  model_preprocessing.md
scripts/: evaluate.py  extract.py  paper_auroc_by_cohort.py  paper_bootstrap.py  paper_build_concept_features.py  paper_data_efficiency.py  paper_fig_per_organ.py  paper_fig_perclass_grid.py  paper_kendall_w.py  paper_overview_macro_ci.py  paper_patient_groups.py  paper_perclass_roc_pr.py  paper_run_probe.py  paper_save_pools.py  zero_shot_compare.py  zero_shot_score.py
