[project]
name = "ctfm-eval"
version = "0.1.0"
description = "Evaluating the raw representational power of 3D CT foundation models: frozen-encoder kNN / zero-shot / linear-probe readouts on RadChestCT and CT-RATE."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "torchvision",
    "monai>=1.5",
    "numpy",
    "pandas",
    "nibabel",
    "scikit-learn",
    "torchio",
    "tqdm",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "transformers",
    "huggingface-hub",
    "safetensors",
    "open-clip-torch>=2.24",
    "pillow",
    "matplotlib",
]

# Optional, per-model. Install only the models you want to run; see
# docs/model_preprocessing.md for the exact weights source and preprocessing.
[project.optional-dependencies]
models = [
    "spectre-fm",          # SPECTRE
    "colipri>=0.1.1",      # COLIPRI
    "merlin-vlm>=0.0.6",   # Merlin
    "rad-vision-engine",   # Pillar-0 (rve)
    "torch-geometric",     # CT-SSG
]

[tool.uv.sources]
spectre-fm = { git = "https://github.com/cclaess/SPECTRE.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctfm_eval"]
